--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2420,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2550,7 @@
        "Rodriguez High School          80.220055          52.988247  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2568,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2583,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
        "Griffin High School   82.044010  84.229064  83.842105  83.356164"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2733,7 +2733,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>82.8</td>\n",
+       "      <td>83.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.4</td>\n",
+       "      <td>76.5</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.7</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.0</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>82.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>82.9</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        9th  10th  11th  12th\n",
+       "school_name                                  \n",
+       "Bailey High School     77.1  77.0  77.5  76.5\n",
+       "Cabrera High School    83.1  83.2  82.8  83.3\n",
+       "Figueroa High School   76.4  76.5  76.9  77.2\n",
+       "Ford High School       77.4  77.7  76.9  76.2\n",
+       "Griffin High School    82.0  84.2  83.8  83.4\n",
+       "Hernandez High School  77.4  77.3  77.1  77.2\n",
+       "Holden High School     83.8  83.4  85.0  82.9\n",
+       "Huang High School      77.0  75.9  76.4  77.2\n",
+       "Johnson High School    77.2  76.7  77.5  76.9\n",
+       "Pena High School       83.6  83.4  84.3  84.1\n",
+       "Rodriguez High School  76.9  76.6  76.4  77.7\n",
+       "Shelton High School    83.4  82.9  83.4  83.8\n",
+       "Thomas High School      nan  83.1  83.5  83.5\n",
+       "Wilson High School     83.1  83.7  83.2  83.0\n",
+       "Wright High School     83.3  84.0  83.8  83.6"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  # Format each grade column.\n",
+    "  math_scores_by_grade[\"9th\"] = math_scores_by_grade[\"9th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  math_scores_by_grade[\"10th\"] = math_scores_by_grade[\"10th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  math_scores_by_grade[\"11th\"] = math_scores_by_grade[\"11th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  math_scores_by_grade[\"12th\"] = math_scores_by_grade[\"12th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  # Make sure the columns are in the correct order.\n",
+    "  math_scores_by_grade = math_scores_by_grade[\n",
+    "                 [\"9th\", \"10th\", \"11th\", \"12th\"]]\n",
+    "  \n",
+    "  math_scores_by_grade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2820,7 +3011,7 @@
        "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2838,7 +3029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2861,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3020,7 +3211,7 @@
        "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3042,7 +3233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3178,7 +3369,7 @@
        "Griffin High School           97.138965          90.599455  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3195,7 +3386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3213,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3295,7 +3486,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3314,7 +3505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3396,7 +3587,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3425,7 +3616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3443,7 +3634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3515,7 +3706,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3534,7 +3725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3606,7 +3797,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
